
- Implemented FR #49571 (CURLOPT_POSTREDIR not implemented). (Sriram Natarajan)
- Implemented FR #49253 (added support for libcurl's CERTINFO option).
  (Linus Nielsen Feltzing <linus@haxx.se>)
  
- Fixed a safe_mode bypass in tempnam() identified by Grzegorz Stachowiak.  
  (Rasmus)
- Fixed a open_basedir bypass in posix_mkfifo() identified by Grzegorz 
  Stachowiak.  (Rasmus)
- Fixed bug #49698 (Unexpected change in strnatcasecmp()). (Rasmus)
- Fixed bug #49647 (DOMUserData does not exist). (Rob)
- Fixed bug #49630 (imap_listscan function missing). (Felipe)
- Fixed bug #49531 (CURLOPT_INFILESIZE sometimes causes warning "CURLPROTO_FILE
  cannot be set"). (Felipe)
- Fixed bug #49517 (cURL's CURLOPT_FILE prevents file from being deleted after
  fclose). (Ilia)
- Fixed bug #48805 (IPv6 socket transport is not working). (Ilia)

?? ??? 2009, PHP 5.3.1RC? <- WHY IS THIS HERE? Gonna be released after 5.3.1 or what??
- Upgraded bundled sqlite to version 3.6.18. (Ilia)
- Restored shebang line check to CGI sapi (not checked by scanner anymore).
  (Jani)

- Fixed certificate validation inside php_openssl_apply_verification_policy
  (Ryan Sleevi, Ilia)

- Fixed bug #49572 (use of C++ style comments causes build failure).
  (Sriram Natarajan)
- Fixed bug #49470 (FILTER_SANITIZE_EMAIL allows disallowed characters).
  (Ilia)


?? ??? 2009, PHP 5.3.1
- Upgraded bundled sqlite to version 3.6.17. (Scott)

- Added missing sanity checks around exif processing. (Ilia)
- Added error constant when json_encode() detects an invalid UTF-8 sequence.
  (Scott)

- Improved readlink on Windows, suppress \??\ and use the drive syntax only.
  (Pierre)
- Improved dns_get_record() AAAA support on windows. Always available when
  IPv6 is support is installed, format is now the same than on unix. (Pierre)
- Improved the DNS functions on OSX to use newer APIs, also use Bind 9 API
  where available on other platforms. (Scott)